--- a/index.html
+++ b/index.html
@@ -8,24 +8,27 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
     <script src="p5.play.js"></script>
 
-    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-database.js"></script>
+   <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-database.js"></script>
 
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
 
-    <script>
-      // Your web app's Firebase configuration
-      var firebaseConfig = {
-        apiKey: "AIzaSyBzNpUGDHCIxikS2b6hHuDyv6ATkJMm0CA",
-        authDomain: "c38a-cea24.firebaseapp.com",
-        databaseURL: "https://c38a-cea24-default-rtdb.firebaseio.com",
-        projectId: "c38a-cea24",
-        storageBucket: "c38a-cea24.appspot.com",
-        messagingSenderId: "885401998862",
-        appId: "1:885401998862:web:a76e2404dada9a89bd8e5f"
-      };
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-    </script>
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyBbib5fQkS1EWG69F0R-JzR6bpxG2wwpkA",
+    authDomain: "class-39-c7f10.firebaseapp.com",
+    databaseURL: "https://class-39-c7f10-default-rtdb.firebaseio.com",
+    projectId: "class-39-c7f10",
+    storageBucket: "class-39-c7f10.appspot.com",
+    messagingSenderId: "968184311497",
+    appId: "1:968184311497:web:d59704a776220b2a016718"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
     
     <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
